lasidmon-uece/lasidmon-uece-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lasidmon-uece
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: lasidmon-uece
